--- a/app/traugott/templates/footer.html
+++ b/app/traugott/templates/footer.html
@@ -1,1 +1,6 @@
-<h3>Footer</h3>
+<div class="container">
+    <ul class="mdl-mini-footer__link-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/">About</a></li>
+    </ul>
+</div>
