--- a/app/traugott/templates/index.html
+++ b/app/traugott/templates/index.html
@@ -9,6 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
+        <link rel="manifest" href="{% static 'manifest.json' %}">
+
         <!-- Add to homescreen for Chrome on Android -->
         <meta name="mobile-web-app-capable" content="yes">
         <link rel="icon" sizes="192x192" href="{% static 'img/android-desktop.png' %}">
@@ -19,18 +21,21 @@
         <meta name="apple-mobile-web-app-title" content="iOS Title">
         <link rel="apple-touch-icon-precomposed" href="{% static 'img/ios-desktop.png' %}">
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:300,400,700&subset=cyrillic" />
-        <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.grey-blue.min.css" />
-        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
+        <!-- Tile Icon for Windows -->
+        <meta name="msapplication-TileImage" content="{% static 'img/ms-desktop.png' %}">
+        <meta name="msapplication-TileColor" content="#2F3BA2">
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:300,400,700&subset=cyrillic">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/mdl.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     </head>
     <body>
-        <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
-            <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
-                {% include 'header.html' %}
-            </header>
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+            {% include 'header.html' %}
             <main class="mdl-layout__content">
                 {% include 'content.html' %}
                 <footer class="mdl-mini-footer">
