--- a/app/traugott/templates/index.html
+++ b/app/traugott/templates/index.html
@@ -1,47 +1,36 @@
+{% extends 'common/layout.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Traugott</title>
-
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-
-        <link rel="manifest" href="{% static 'manifest.json' %}">
-
-        <!-- Add to homescreen for Chrome on Android -->
-        <meta name="mobile-web-app-capable" content="yes">
-        <link rel="icon" sizes="192x192" href="{% static 'img/android-desktop.png' %}">
-
-        <!-- Add to homescreen for Safari on iOS -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="iOS Title">
-        <link rel="apple-touch-icon-precomposed" href="{% static 'img/ios-desktop.png' %}">
-
-        <!-- Tile Icon for Windows -->
-        <meta name="msapplication-TileImage" content="{% static 'img/ms-desktop.png' %}">
-        <meta name="msapplication-TileColor" content="#2F3BA2">
-
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:300,400,700&subset=cyrillic">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/mdl.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    </head>
-    <body>
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-            {% include 'header.html' %}
-            <main class="mdl-layout__content">
-                {% include 'content.html' %}
-                <footer class="mdl-mini-footer">
-                    {% include 'footer.html' %}
-                </footer>
-            </main>
+{% block content %}
+    <div class="container">
+        <div class="mdl-grid">
+            <h2 class="mdl-cell mdl-cell--12-col">Your Latest shots</h2>
+            {% for card in cards %}
+                <div class="mdl-cell mdl-cell--4-col">
+                    <div class="mdl-card mdl-shadow--4dp">
+                        <div class="mdl-card__title">
+                            <h2 class="mdl-card__title-text">{{ card.date }}</h2>
+                        </div>
+                        <div class="mdl-card__media">
+                            <img src="{% static 'img/beer.jpg' %}" class="shot-image">
+                        </div>
+                        <div class="mdl-card__supporting-text">
+                            This text might describe the photo and provide further information, such as where and
+                            when it was taken.
+                        </div>
+                        <div class="mdl-card__actions mdl-card--border">
+                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                                Edit This Shot
+                            </a>
+                            <div class="mdl-layout-spacer"></div>
+                            <button class="mdl-button mdl-js-button mdl-button--icon">
+                                <i class="material-icons">delete</i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-    </body>
-</html>
+    </div>
+{% endblock %}
