--- a/app/traugott/templates/common/layout.html
+++ b/app/traugott/templates/common/layout.html
@@ -32,6 +32,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+        <script src="{% static 'js/core.js' %}"></script>
     </head>
     <body>
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
