--- a/app/traugott/templates/handlebars/login.html
+++ b/app/traugott/templates/handlebars/login.html
@@ -1,8 +1,4 @@
-{% extends 'common/layout.html' %}
-
-{% load static %}
-
-{% block content %}
+<script id="t-login" type="text/x-handlebars-template">
     <div class="container">
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--2-offset-desktop mdl-cell--8-col mdl-cell--1-offset-tablet
@@ -30,4 +26,4 @@
             </div>
         </div>
     </div>
-{% endblock %}
+</script>
