--- a/app/traugott/templates/common/header.html
+++ b/app/traugott/templates/common/header.html
@@ -9,16 +9,10 @@
         <div class="mdl-layout-spacer"></div>
 
         <!-- Navigation. We hide it in small screens. -->
-        <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="/">Home</a>
-            <a class="mdl-navigation__link" href="/">About</a>
-        </nav>
+        <div class="menu mdl-layout--large-screen-only"></div>
     </div>
 </header>
 <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Traugott</span>
-    <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="/">Home</a>
-        <a class="mdl-navigation__link" href="/">About</a>
-    </nav>
+    <div class="menu mdl-layout--small-screen-only"></div>
 </div>
