--- a/app/traugott/templates/common/layout.html
+++ b/app/traugott/templates/common/layout.html
@@ -43,6 +43,7 @@
             </main>
         </div>
 
+        {% include 'handlebars/menu.html' %}
         {% include 'handlebars/login.html' %}
         {% include 'handlebars/shots.html' %}
 
