--- a/app/traugott/templates/common/footer.html
+++ b/app/traugott/templates/common/footer.html
@@ -1,6 +1,11 @@
 <div class="container">
     <ul class="mdl-mini-footer__link-list">
-        <li><a href="/">Home</a></li>
-        <li><a href="/">About</a></li>
+        {% if user.id %}
+            <a class="mdl-navigation__link" href="{% url 'index' %}">Home</a>
+            <a class="mdl-navigation__link" href="{% url 'about' %}">About</a>
+            <a class="mdl-navigation__link" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a class="mdl-navigation__link" href="{% url 'login' %}">About</a>
+        {% endif %}
     </ul>
 </div>
