Update responsive template, update dev logger

--- a/app/traugott/templates/common/header.html
+++ b/app/traugott/templates/common/header.html
@@ -22,7 +22,7 @@
 </header>
 <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Traugott</span>
-    <div class="menu">
+    <div class="menu mdl-navigation">
         {% if user.id %}
             <a class="mdl-navigation__link" href="{% url 'index' %}">Home</a>
             <a class="mdl-navigation__link" href="{% url 'about' %}">About</a>
