--- a/app/traugott/templates/index.html
+++ b/app/traugott/templates/index.html
@@ -29,11 +29,56 @@
                         </div>
                     </div>
                 </div>
-            {% empty %}
+                {% empty %}
+                <div class="empty mdl-cell mdl-cell--12-col">
+                    You haven't added any shots yet.
+                </div>
+                <div class="empty mdl-cell mdl-cell--12-col">
+                    You haven't added any shots yet.
+                </div>
+                <div class="empty mdl-cell mdl-cell--12-col">
+                    You haven't added any shots yet.
+                </div>
+                <div class="empty mdl-cell mdl-cell--12-col">
+                    You haven't added any shots yet.
+                </div>
+                <div class="empty mdl-cell mdl-cell--12-col">
+                    You haven't added any shots yet.
+                </div>
                 <div class="empty mdl-cell mdl-cell--12-col">
                     You haven't added any shots yet.
                 </div>
             {% endfor %}
+        </div>
+    </div>
+    <button id="add-shot" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+        <i class="material-icons">add</i>
+    </button>
+    <div id="add-shot-dialog" class="mdl-dialog hidden">
+        <h4 class="mdl-dialog__title">Choose shot and quantity</h4>
+        <div class="mdl-dialog__content">
+            <ul class="mdl-list">
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons">local_bar</i>
+                        <span>Martini</span>
+                        <span class="mdl-list__item-sub-title">100ml</span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
+                        <a class="mdl-list__item-secondary-action" href="/">
+                            <i class="material-icons">remove_circle_outline</i>
+                        </a>
+                        <span class="mdl-list__item-secondary-info">1x</span>
+                        <a class="mdl-list__item-secondary-action" href="/">
+                            <i class="material-icons">add_circle_outline</i>
+                        </a>
+                    </span>
+                </li>
+            </ul>
+        </div>
+        <div class="mdl-dialog__actions">
+            <button type="button" class="mdl-button">Close</button>
+            <button type="button" class="mdl-button mdl-button--primary">Add</button>
         </div>
     </div>
 {% endblock %}
