Update add form list

--- a/app/traugott/static/css/base.css
+++ b/app/traugott/static/css/base.css
@@ -43,7 +43,19 @@ form .error-holder {
     left: 0;
     right: 0;
     width: calc(100% - 32px);
+    max-width: 968px;
     margin: auto;
     background: #FFF;
     z-index: 1000;
+}
+
+.shot-title {
+    position: relative;
+    top: 8px;
+}
+
+.shot-quantity {
+    position: relative;
+    top: -8px;
+    padding: 0 5px;
 }
