--- a/app/traugott/templates/index.html
+++ b/app/traugott/templates/index.html
@@ -60,18 +60,47 @@
             <ul class="mdl-list">
                 <li class="mdl-list__item mdl-list__item--two-line">
                     <span class="mdl-list__item-primary-content">
-                        <i class="material-icons">local_bar</i>
-                        <span>Martini</span>
-                        <span class="mdl-list__item-sub-title">100ml</span>
+                        <i class="material-icons mdl-list__item-icon">local_bar</i>
+                        <span class="shot-title">Martini (100ml)</span>
                     </span>
                     <span class="mdl-list__item-secondary-content">
-                        <a class="mdl-list__item-secondary-action" href="/">
+                        <button class="mdl-button mdl-js-button mdl-button--icon">
                             <i class="material-icons">remove_circle_outline</i>
-                        </a>
-                        <span class="mdl-list__item-secondary-info">1x</span>
-                        <a class="mdl-list__item-secondary-action" href="/">
+                        </button>
+                        <span class="shot-quantity">1x</span>
+                        <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
                             <i class="material-icons">add_circle_outline</i>
-                        </a>
+                        </button>
+                    </span>
+                </li>
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons mdl-list__item-icon">local_cafe</i>
+                        <span class="shot-title">Beer (500ml)</span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
+                        <button class="mdl-button mdl-js-button mdl-button--icon">
+                            <i class="material-icons">remove_circle_outline</i>
+                        </button>
+                        <span class="shot-quantity">1x</span>
+                        <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
+                            <i class="material-icons">add_circle_outline</i>
+                        </button>
+                    </span>
+                </li>
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons mdl-list__item-icon">local_drink</i>
+                        <span class="shot-title">Whiskey (50ml)</span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
+                        <button class="mdl-button mdl-js-button mdl-button--icon">
+                            <i class="material-icons">remove_circle_outline</i>
+                        </button>
+                        <span class="shot-quantity">1x</span>
+                        <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
+                            <i class="material-icons">add_circle_outline</i>
+                        </button>
                     </span>
                 </li>
             </ul>
