--- a/app/traugott/static/css/responsive/phone.css
+++ b/app/traugott/static/css/responsive/phone.css
@@ -8,6 +8,27 @@
     }
 
     .mdl-dialog__title {
-        font-size: 1.5em;
+        padding: 1rem 1rem 0;
+        font-size: 1.8em;
+    }
+
+    .mdl-dialog__content {
+        padding: 1em;
+    }
+
+    .mdl-list__item {
+        padding: 0;
+    }
+
+    .mdl-cell {
+        margin: 0;
+    }
+
+    .shot-type .image {
+        width: 35px;
+    }
+
+    .shot-type .quantity {
+        padding: 0;
     }
 }
