--- a/app/traugott/static/css/base.css
+++ b/app/traugott/static/css/base.css
@@ -95,6 +95,23 @@ form .error-holder {
     background-color: rgba(0, 0, 0, 0.05);
 }
 
+.shot .quantity {
+    position: relative;
+    top: 2px;
+    margin: 0;
+    padding: 0;
+}
+
+.shot .quantity input {
+    width: 1em;
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+    text-align: center;
+    border: none;
+    background: transparent;
+}
+
 .drawer-image {
     position: relative;
     width: 100%;
