--- a/app/traugott/static/css/responsive/phablet.css
+++ b/app/traugott/static/css/responsive/phablet.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 481px) and (max-width: 768px) {
+    h1 {
+        font-size: 2.5em;
+    }
+
     h2 {
         font-size: 2em;
     }
