--- a/app/traugott/templates/common/layout.html
+++ b/app/traugott/templates/common/layout.html
@@ -53,7 +53,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.2.1/material.min.js"></script>
 
-        <script src="{% static 'js/library.js' %}"></script>
+        <script src="{% static 'js/shots/dialog.js' %}"></script>
+        <script src="{% static 'js/shots/item.js' %}"></script>
+        <script src="{% static 'js/shots/list.js' %}"></script>
+
+        <script src="{% static 'js/common.js' %}"></script>
         <script src="{% static 'js/index.js' %}"></script>
+
+        {% include 'handlebars.html' %}
     </body>
 </html>
