--- a/app/traugott/templates/static/about.html
+++ b/app/traugott/templates/static/about.html
@@ -4,21 +4,17 @@
 
 {% block content %}
     <div class="container static">
-        <h1>About</h1>
-        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-            ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-
-        <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-            venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
-
-        <p>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo
-            ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
-
-        <p>Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
-            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.</p>
-
-        <p>Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum
-            rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus
-            pulvinar, hendrerit id, lorem.</p>
+        <h1>About App</h1>
+        <p>Traugott is an application for calculation of individual alcohol consumption.</p>
+        <p>This application currently in beta, so no warranties, use at your own risk.</p>
+        <br>
+        <p>Current version: <strong>0.1.31</strong></p>
+        <p>Author: <strong>Alexander Chaika</strong></p>
+        <p>Email: <a href="mailto:manti.by@gmail.com">manti.by@gmail.com</a></p>
+        <p>License:
+            <a href="https://raw.githubusercontent.com/manti-by/Traugott/django/NEW-BSD-LICENSE">
+                NEW BSD LICENSE
+            </a>
+        </p>
     </div>
 {% endblock %}
