--- a/app/traugott/templates/index.html
+++ b/app/traugott/templates/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-    <div class="container">
+    <div id="shot-list" class="container">
         {% include 'shots/list.html' %}
     </div>
     {% include 'shots/add_form.html' %}
