--- a/app/traugott/templates/shots/list.html
+++ b/app/traugott/templates/shots/list.html
@@ -20,7 +20,8 @@
                             <i class="material-icons">add_circle_outline</i>
                         </button>
                         <span class="quantity">
-                            <input type="text" name="quantity" value="{{ shot.quantity }}" data-type-id="{{ shot.type.id }}">
+                            <input type="text" name="quantity" value="{{ shot.quantity }}"
+                                   data-id="{{ shot.id }}" data-type-id="{{ shot.type.id }}">
                         </span>
                         <button class="mdl-button mdl-js-button mdl-button--icon decrease">
                             <i class="material-icons">remove_circle_outline</i>
