--- a/app/churchill/templates/common/header.html
+++ b/app/churchill/templates/common/header.html
@@ -3,7 +3,7 @@
 <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">Traugott</span>
+        <span class="mdl-layout-title">Churchill</span>
 
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
