--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Traugott</title>
+        <title>Churchill</title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
