--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static compress %}
 
 <!DOCTYPE html>
 <html>
@@ -27,14 +27,16 @@
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:300,400,700&subset=cyrillic">
         <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/mdl.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 
-        <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phone.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phablet.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/tablet.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/notebook.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/desktop.css' %}">
+        {% compress css %}
+            <link rel="stylesheet" type="text/css" href="{% static 'css/mdl.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phone.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/phablet.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/tablet.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/notebook.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/responsive/desktop.css' %}">
+        {% endcompress %}
     </head>
     <body>
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -53,12 +55,14 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.2.1/material.min.js"></script>
 
-        <script src="{% static 'js/shots/dialog.js' %}"></script>
-        <script src="{% static 'js/shots/item.js' %}"></script>
-        <script src="{% static 'js/shots/list.js' %}"></script>
+        {% compress js %}
+            <script src="{% static 'js/shots/dialog.js' %}"></script>
+            <script src="{% static 'js/shots/item.js' %}"></script>
+            <script src="{% static 'js/shots/list.js' %}"></script>
 
-        <script src="{% static 'js/common.js' %}"></script>
-        <script src="{% static 'js/index.js' %}"></script>
+            <script src="{% static 'js/common.js' %}"></script>
+            <script src="{% static 'js/index.js' %}"></script>
+        {% endcompress %}
 
         {% include 'handlebars.html' %}
     </body>
